# dyn-param-search

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  parser.cpp  parser.h  run.cpp  run.h  single_joint_variables.h  variables.h
utils/: plot_trajectory.py  print_log.py
